--- a/dado/dado/CMakeLists.txt
+++ b/dado/dado/CMakeLists.txt
@@ -1,4 +1,4 @@
 include_directories(../random)
 
-add_libray (Dado dado.c dado.h)
+add_library (Dado dado.c dado.h)
 target_link_libraries(Dado Random)
