--- a/istogrammi/CMakeLists.txt
+++ b/istogrammi/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required (VERSION 2.6)
 project (Main)
 
 include_directories (vstampa)
-add_subdirectory (vstampa)
+include_directories (myvect)
 
+add_subdirectory (vstampa)
+add_subdirectory (random)
+add_subdirectory (myvect)
 
 add_executable (Main main.c)
-target_link_libraries (Main Vstampa)
+target_link_libraries (Main Vstampa Myvect)
