--- a/bucket_sort/CMakeLists.txt
+++ b/bucket_sort/CMakeLists.txt
@@ -4,13 +4,11 @@ project (bucketsort)
 
 include_directories (myvect)
 include_directories (myvect_sort)
-include_directories (mymatrix)
 
 add_subdirectory (random)
 add_subdirectory (myvect)
 add_subdirectory (myvect_sort)
 add_subdirectory (myvect_math)
-add_subdirectory (mymatrix)
 
 add_executable (Main main.c)
-target_link_libraries (Main MyVect MyVectSort MyMatrix)
+target_link_libraries (Main MyVect MyVectSort)
